find_package(xtensor-python REQUIRED)
if(NOT xtensor-python_FOUND)
    message(FATAL_ERROR "xtensor-python not found. Please make sure xtensor-python is installed.")
else()
    message(STATUS "xtensor-python include directories: ${xtensor-python_INCLUDE_DIRS}")
endif()

find_package(pybind11 REQUIRED)
if(NOT pybind11_FOUND)
    message(FATAL_ERROR "pybind11 not found. Please make sure pybind11 is installed.")
else()
    message(STATUS "pybind11 include directories: ${pybind11_INCLUDE_DIRS}")
endif()

pybind11_add_module(TDD "python-c.cpp")
find_package(Python3 REQUIRED NumPy)
if(Python3_NumPy_FOUND)
    message(STATUS "add numpy from ${Python3_NumPy_INCLUDE_DIRS}")
else()
    message(FATAL_ERROR "NumPy not found for Python ${python_version}, try to run:\n ${Python3_EXECUTABLE} -m pip install numpy")
endif()
target_link_libraries(TDD PUBLIC TDD_C)
target_include_directories(TDD PUBLIC ${xtensor-python_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS})