project(test_sort CXX)
set(CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED True)
add_executable(${PROJECT_NAME} "sort.cpp" )
target_compile_features(${PROJECT_NAME} PUBLIC cxx_auto_type)
target_link_libraries(${PROJECT_NAME} PUBLIC TDD_C)

project(test_cnot CXX)
set(CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED True)
add_executable(${PROJECT_NAME}  "cnot.cpp")
target_compile_features(${PROJECT_NAME} PUBLIC cxx_auto_type)
target_link_libraries(${PROJECT_NAME} TDD_C)

project(test_tdd CXX)
set(CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED True)
add_executable(${PROJECT_NAME}  "test_tdd.cpp")
target_compile_features(${PROJECT_NAME} PUBLIC cxx_auto_type)
target_link_libraries(${PROJECT_NAME} PUBLIC TDD_C)

project(test_tn CXX)
set(CMAKE_BUILD_TYPE Debug)
set(CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED True)
add_executable(${PROJECT_NAME}  "test_tn.cpp")
target_compile_features(${PROJECT_NAME} PUBLIC cxx_auto_type)
target_link_libraries(${PROJECT_NAME} PUBLIC TDD_C)

project(test_bv  CXX)
set(CMAKE_BUILD_TYPE Debug)
set(CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED True)
add_executable(${PROJECT_NAME}  "test_bv.cpp")
target_compile_features(${PROJECT_NAME} PUBLIC cxx_auto_type)
target_link_libraries(${PROJECT_NAME} PUBLIC TDD_C)